// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createFactory renders div and userProp integer as children 1`] = `
<div
  class=""
  component="componentValue"
  id="componentIdValue"
>
  42
</div>
`;

exports[`createFactory renders div and userProp string as children 1`] = `
<div
  class=""
  component="componentValue"
  id="componentIdValue"
>
  userPropString
</div>
`;

exports[`createFactory renders userProp span JSX with one prop 1`] = `
<span
  id="I should be the only prop in the output"
/>
`;

exports[`createFactory renders userProp span component with component props 1`] = `
<span
  class=""
  component="componentValue"
  id="I should be present alongside componentProps"
>
  Component Child 1
  Component Child 2
</span>
`;

exports[`createFactory renders userProp span function with component props 1`] = `
<span
  class=""
  component="componentValue"
  id="I should be present alongside componentProps"
>
  Component Child 1
  Component Child 2
</span>
`;

exports[`createFactory renders userProp span function without component props 1`] = `
<span
  id="I should be the only prop in the output"
/>
`;
